<resources>

    <string name="app_name">Fuca-Termin</string>
    <string name="menu_settings">Postavke</string>
    <string name="Pick">Pick</string>
    <string name="Save">Save</string>
    <string name="Team1">Team1</string>
    <string name="Team2">Team2</string>
    <string name="Date">Date</string>
    <string name="Description">Description</string>
    <string name="CreateNew">Nova</string>
    <string name="Display">Display</string>
    <string name="title_activity_create_new">CreateNew</string>
    <string name="Settings">Postavke</string>
    <string name="titleStatus">Nova poruka</string>
    <string name="hintText">Unesite poruku</string>
    <string name="buttonUpdate">Šalji</string>
    <string name="StartService">Pokreni servis</string>
    <string name="StopService">Zaustavi servis</string>
    <string name="Comments">Fuca-Termin</string>
    <!--  -->
    <string name="msgSetupPrefs">Molim postavite postavke!</string>
    <string name="send_timeline_notifications_permission_label">My send NOtification label</string>
    <string name="send_timeline_notifications_permission_description">My send NOtification label description</string>
    <string name="receive_timeline_notifications_permission_label">My Receive NOtification label</string>
    <string name="receive_timeline_notifications_permission_description">My Receive NOtification label description</string>
    <string name="msgLastTimelineUpdate">LastTimeline Update</string>
    <string name="wifi_network">WIFI</string>
    <string name="any_network">ANY</string>
    <string name="category_service">Podaci o servisu</string>
    <string name="category_user">Podaci o korisniku</string>
    <string name="category_network">Podaci o mreži</string>
    <string name="enable_service">Primanje poruka</string>
    <string name="enable_service_desc">Omogući automatsko primanje poruka</string>
    <string name="update_interval">Interval primanja poruka</string>
    <string name="update_interval_desc">Koliko često slati upite na server</string>
    <string name="network_chooser">Vrste mreže</string>
    <string name="network_chooser_desc">Odabrite vrstu mreže</string>
    <string name="username">Korisničko ime</string>
    <string name="username_desc">Unesite svoj Google korisnički račun\n(Mora biti aktivni google račun na mobu)</string>
    <string name="password">Korisnička lozinka</string>
    <string name="password_desc">Unesite svoju Google korisničku lozinku</string>
    <string name="app_url">Web adresa aplikacije</string>
    <string name="app_url_desc">Web adresa aplikacije na koju slati podatke</string>

</resources>